# virtual-machine

./: CMakeLists.txt  readme.md
src/instruction/: instruction.cpp  instruction.hpp
src/instructions/: instructions.cpp  instructions.hpp
src/memory/: memory.cpp  memory.hpp
src/operations/: addition.cpp  addition.hpp  greater_than.cpp  greater_than.hpp  halt.cpp  halt.hpp  jump.cpp  jump.hpp  jump_if_equals.cpp  jump_if_equals.hpp  less_than.cpp  less_than.hpp  print.cpp  print.hpp
src/operator/: operator.hpp
src/stack_pointer/: stack_pointer.hpp
src/value/: value.cpp  value.hpp
tests/: addition.cpp  memory.cpp
